--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,27 @@
+:root {
+    background-color: var(--black);
+    background: var(--white);
 
+}
+body{
+    font-family: Roboto;
+    font-style: normal;
+ }
+ 
+ 
+ .hero-text{
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+ }
+ .hero-button{
+     background-color: #2196F3;
+     color: #ffffff;
+     rgba(0, 0, 0, 0.15);
+     border-radius: 4px;
+     font-weight: bold;
+     font-size: 16px;
+     line-height: 1.87;
+
+ }
 
