--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,22 @@
 :root {
     --background-color: #ffffff;
+    --background-footer: #2F303A;
     --text-color: #212121;
     --under-text-color: #757575;
     --animation-links: #2196F3;
     --animation-bottons: #2196F3;
     --buttons-background: #F5F4FA;
+    --animation-button-focus:#ffffff;
+    --logo: #2196F3; 
+    --log:#ffffff;
+    --address:#ffffff;
+    --info:rgba(255, 255, 255, 0.6);
+    --shadow-title: #ffffff;
+    --background-hero: #2F303A;
+    --hero-color:#ffffff;
+    --hero-button-background:#2196F3;
+    --hero-button-color:#ffffff;
+
 }
 body{
     font-family: Roboto, sans-serif;
@@ -23,7 +35,7 @@ body{
     color: var(--text-color);
 }
  .web{
-     color: #2196F3;
+     color:var(--logo);
  }
  .menu-element{
     font-weight: 500;
@@ -49,14 +61,14 @@ body{
 }
  /* FOOTER */
 .footer{
-    background-color: #2F303A;
+    background-color: var(--background-footer);
 }
  .studio-footer{
     font-family: Raleway;
     font-weight: bold;
     font-size: 26px;
     line-height: 1.19;
-    color: #FFFFFF;
+    color: var(--log);
     
  }
 .address{
@@ -64,13 +76,13 @@ body{
     font-weight: normal;
     font-size: 14px;
     line-height: 1.71;
-    color: #FFFFFF;
+    color: var(--log);
 }
 .info{
     font-style: normal; /*destroed italic */
     font-size: 14px;
     line-height: 1.71;
-    color: rgba(255, 255, 255, 0.6);;
+    color: var(--info);
 }
 .info:focus, .info:hover{
     color:var(--animation-links);
@@ -79,11 +91,11 @@ body{
  /* INDEX-MAIN */
  /* hero-section */
  .shadow-title{
-     color: #FFFFFF;
+     color: var(--shadow-title);
  }
  .hero{
-     background-color: #2F303A;
-     color: #FFFFFF;
+     background-color: var(--background-hero);
+     color: var(--hero-color);
  }
  .hero-text{
     font-weight: 900;
@@ -92,9 +104,9 @@ body{
 }
  .hero-button{
     font-family: inherit;
-     background-color: #2196F3;
-     color: #ffffff;
-     rgba(0, 0, 0, 0.15);
+     background-color: var(--hero-button-background);
+     color: var(--hero-button-color);
+     rgba (0, 0, 0, 0.15);
      font-weight: bold;
      font-size: 16px;
      line-height: 1.87;
@@ -143,13 +155,14 @@ body{
     background-color: var(--buttons-background);
     cursor:pointer;
 }
-.active {
+.active{
     background-color: var(--animation-bottons);
+    color: var(--animation-button-focus); 
 }
 .portfolio-menu-item:hover,
 .portfolio-menu-item:focus{
     background-color: var(--animation-bottons);
-    color: #FFFFFF;
+    color: var(--animation-button-focus);
 }
 /* portfolio */
 .portfolio-title{
